www/firefox/files/patch-freebsd11
Drop after FreeBSD 11 EOL, see https://svnweb.freebsd.org/changeset/base/303524

media/libcubeb/src/cubeb_oss.c:362:10: error: implicit declaration of function 'getline' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
  while (getline(&line, &linecap, sndstatfp) > 0) {
         ^
media/libcubeb/src/cubeb_oss.c:850:13: warning: comparison of integers of different signs: 'long' and 'unsigned int' [-Wsign-compare]
    if (nfr > s->bufframes) {
        ~~~ ^ ~~~~~~~~~~~~

--- media/libcubeb/src/cubeb_oss.c.orig	2021-08-31 15:32:30.862769000 +0200
+++ media/libcubeb/src/cubeb_oss.c	2021-08-31 15:33:07.421620000 +0200
@@ -10,6 +10,9 @@
  * accompanying file LICENSE for details.
  */
 
+#if defined(__FreeBSD__) && __FreeBSD__ < 12
+#define _WITH_GETLINE
+#endif
 #include "cubeb-internal.h"
 #include "cubeb/cubeb.h"
 #include "cubeb_mixer.h"
